--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import 'layouts/footer';
 
 @import 'components/button';
+@import 'components/modal';
 @import 'components/breath';
 @import 'components/exercises';
 @import 'components/exercise';
