--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,7 +1,6 @@
 body {
   font-family: $font-family;
   @include font-body;
-  font-weight: 500;
   color: $color-black;
 }
 
@@ -17,7 +16,7 @@ a {
     text-decoration: none;
     // text-decoration-color: rgba($color-green, 0);
     // text-underline-offset: 0.7em;
-    color: $color-green;
+    color: $color-inhale;
   }
   &:focus {
     // text-decoration: underline solid rgba(0,0,0,0.1);
