--- a/src/scss/base/fonts.scss
+++ b/src/scss/base/fonts.scss
@@ -1,26 +1,28 @@
-@font-face {
-  font-family: 'Suisse Intl';
-  src: url('../fonts/subset-SuisseIntl-Regular.woff2') format('woff2'),
-    url('../fonts/subset-SuisseIntl-Regular.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&display=swap');
 
-@font-face {
-  font-family: 'Suisse Intl';
-  src: url('../fonts/subset-SuisseIntl-Light.woff2') format('woff2'),
-    url('../fonts/subset-SuisseIntl-Light.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
+// @font-face {
+//   font-family: 'Suisse Intl';
+//   src: url('../fonts/subset-SuisseIntl-Regular.woff2') format('woff2'),
+//     url('../fonts/subset-SuisseIntl-Regular.woff') format('woff');
+//   font-weight: normal;
+//   font-style: normal;
+//   font-display: swap;
+// }
 
-@font-face {
-  font-family: 'Suisse Intl Book';
-  src: url('../fonts/subset-SuisseIntl-Book.woff2') format('woff2'),
-    url('../fonts/subset-SuisseIntl-Book.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
+// @font-face {
+//   font-family: 'Suisse Intl';
+//   src: url('../fonts/subset-SuisseIntl-Light.woff2') format('woff2'),
+//     url('../fonts/subset-SuisseIntl-Light.woff') format('woff');
+//   font-weight: 300;
+//   font-style: normal;
+//   font-display: swap;
+// }
+
+// @font-face {
+//   font-family: 'Suisse Intl Book';
+//   src: url('../fonts/subset-SuisseIntl-Book.woff2') format('woff2'),
+//     url('../fonts/subset-SuisseIntl-Book.woff') format('woff');
+//   font-weight: normal;
+//   font-style: normal;
+//   font-display: swap;
+// }
