--- a/src/scss/components/breath.scss
+++ b/src/scss/components/breath.scss
@@ -141,9 +141,27 @@
 
   &__timer {
     text-align: center;
+    font-weight: $font-weight-bold;
+    color: $color-gray;
   }
   &__counter {
     text-align: center;
+    color: $color-gray;
+  }
+  &__countdown {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    font-size: responsive-value(36px, 64px);
+    font-weight: $font-weight-bold;
+    color: $color-inhale;
+    display: none;
+
+    &.active {
+      display: block;
+    }
   }
 }
 
