--- a/src/scss/components/exercise.scss
+++ b/src/scss/components/exercise.scss
@@ -5,16 +5,24 @@
   text-align: center;
 
   &__name {
-    @include font-h3;
+    @include font-h2;
     margin-bottom: $margin;
   }
 
   &__pattern {
     color: $color-gray;
     margin-bottom: $margin;
+    margin-top: responsive-value(-2px, -4px);
   }
   &__description {
     margin-bottom: $margin-2;
+  }
+  &__tips {
+    margin-bottom: $margin-2;
+
+    &-title {
+      @include font-h3;
+    }
   }
   &__buttons {
     text-align: center;
