--- a/src/scss/layouts/header.scss
+++ b/src/scss/layouts/header.scss
@@ -7,12 +7,23 @@
   justify-content: space-between;
 
   &__right {
-    flex: 1 1 auto;
+    flex: 0 0 auto;
+    padding: $block-padding;
+    margin-top: responsive-value(-4px, -8px); // visual shift
+
+    & > * {
+      margin-right: $margin-2;
+    }
   }
 
   &__left {
-    flex: 0 0 auto;
+    flex: 1 1 auto;
     padding: $block-padding;
+    margin-top: responsive-value(-4px, -8px);
+  }
+
+  &__lang-switch {
+    color: $color-gray;
   }
 
   &__goback {
