--- a/src/scss/components/breath.scss
+++ b/src/scss/components/breath.scss
@@ -13,6 +13,10 @@
 
   &__practice {
     margin: responsive-value(60px, 100px) 0;
+    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   &__text {
