--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -91,6 +91,8 @@ ul {
   margin: 0 $container-margin;
   max-width: $container-width;
   flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
 
   & > section:last-child {
     margin-bottom: 0;
