--- a/src/scss/components/exercises.scss
+++ b/src/scss/components/exercises.scss
@@ -1,5 +1,9 @@
 .exercises {
-  margin-bottom: $block-margin;
+  // margin-bottom: $block-margin;
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 
   &__header {
     margin-bottom: $margin-3;
