Added dark theme support
Colors declarations changed from scss vars to css vars

--- a/src/scss/abstract/mixins.scss
+++ b/src/scss/abstract/mixins.scss
@@ -151,6 +151,6 @@
 
 @mixin block-rounded {
   padding: $block-padding;
-  background: $color-gray-2;
+  background: var(--color-bg-muted);
   border-radius: $border-radius;
 }
