--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,11 +1,12 @@
 body {
   font-family: $font-family;
   @include font-body;
-  color: $color-black;
+  color: var(--color-text);
+  background-color: var(--color-bg);
 }
 
 a {
-  color: $color-black;
+  color: var(--color-text);
   text-decoration: none;
   // text-underline-offset: 0.3em;
   // text-decoration-color: rgba($color-green, 0.4);
@@ -29,7 +30,7 @@ h2,
 h3,
 h4 {
   font-weight: 400;
-  color: $color-black;
+  color: var(--color-text);
 }
 
 h1,
@@ -87,11 +88,15 @@ p + p {
 
 .text {
   &-muted {
-    color: rgba($color-gray, 0.6);
+    color: var(--color-text-muted);
   }
 
   &-lead {
     @include font-lead;
+  }
+
+  &__h3 {
+    @include font-h3;
   }
 }
 
@@ -127,4 +132,11 @@ p + p {
   & ol {
     padding-left: $base-list-padding-left;
   }
+}
+
+hr {
+  margin: $margin auto;
+  border: 1px solid var(--color-text-muted);
+  opacity: 0.2;
+  max-width: 200px;
 }
