--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,6 @@
 @import 'abstract/functions';
 @import 'abstract/variables'; //base vars and styles
 
-
 @import 'base/base';
 @import 'base/fonts';
 @import 'base/typography';
@@ -24,3 +23,8 @@
 
 @import 'pages/index';
 
+/*
+excercises
+  excercise
+    breath
+*/
