--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -65,15 +65,11 @@ html {
 }
 
 body {
-  // font-size: var(--font-size);
-  // background-image: url(../images/om.jpg);
-  // line-height: var(--line-height);
-
   max-width: 100vw;
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   box-sizing: border-box;
 }
 
@@ -110,10 +106,4 @@ a,
 input,
 button {
   -webkit-tap-highlight-color: transparent;
-}
-
-hr {
-  margin: $margin auto;
-  border: 1px solid rgba($color-gray, 0.2);
-  max-width: 200px;
 }
