--- a/src/scss/components/button.scss
+++ b/src/scss/components/button.scss
@@ -1,10 +1,10 @@
 .button {
   display: inline-block;
-  color: $color-black;
+  color: var(--color-text);
   border-radius: $button-border-radius;
   text-align: center;
   transition: all var(--transition);
-  background-color: $color-white;
+  background-color: var(--color-bg);
   cursor: pointer;
   line-height: $button-s-height;
   padding: 0 responsive-value(24px, 48px);
@@ -16,7 +16,7 @@
 
   &:hover {
     border-color: transparent;
-    background-color: $color-white;
+    background-color: var(--color-bg);
     color: $color-green;
   }
 
@@ -26,10 +26,10 @@
   }
 
   &--border {
-    border: 1px solid $color-black;
+    border: 1px solid var(--color-text);
 
     &:hover {
-      border-color: $color-black;
+      border-color: var(--color-text);
     }
   }
 
@@ -58,16 +58,16 @@
   }
 
   &--grey {
-    background-color: $color-gray-2;
+    background-color: var(--color-bg-muted);
 
     &:hover {
-      background-color: $color-gray-2;
+      background-color: var(--color-bg-muted);
     }
   }
 
   &--active {
     background-color: transparent;
-    border: 1px solid $color-black;
+    border: 1px solid var(--color-text);
   }
 
   &--primary {
