--- a/src/scss/components/exercises.scss
+++ b/src/scss/components/exercises.scss
@@ -36,8 +36,12 @@
     transition: all var(--transition);
 
     &:hover {
-      background-color: $color-gray-2;
+      background-color: var(--color-bg-muted);
+
       box-shadow: 0 10px 30px rgba($color-inhale, 0.3);
+      @media (prefers-color-scheme: dark) {
+        box-shadow: 0 10px 30px rgba(#000, 0.2);
+      }
     }
 
     &-name {
@@ -45,7 +49,7 @@
     }
 
     &-pattern {
-      color: $color-gray;
+      color: var(--color-text-muted);
     }
   }
 }
