--- a/src/scss/components/modal.scss
+++ b/src/scss/components/modal.scss
@@ -24,7 +24,7 @@
     }
 
     & svg {
-      fill: $color-black;
+      fill: var(--color-text);
       opacity: 0.3;
       transition: opacity var(--transition);
     }
