Removed redundant layout containers

--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -22,8 +22,8 @@ html(lang='en')
   body(class='page--'+pageClass)
     #app
       //- include ../includes/modules/header
-      main.main
-        block content
+      //- main.main
+      block content
       //- include ../includes/modules/footer
 
     block script
