--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,6 +18,7 @@
 @import 'components/breath';
 @import 'components/exercises';
 @import 'components/exercise';
+@import 'components/breath-icon.scss';
 
 @import 'vendor/vue-js-modal';
 
