Added top margin for Start button
And color-gray-2 var removed. color-bg-muted used instead

--- a/src/scss/abstract/variables.scss
+++ b/src/scss/abstract/variables.scss
@@ -17,7 +17,7 @@ $color-yellow: #e0e339;
 $color-dark: #266696;
 
 $color-gray: rgba(67, 64, 71, 0.4);
-$color-gray-2: #f7f7f9;
+// $color-gray-2: rgba(165, 165, 165, 0.15);
 // $color-gray-light: #93b6bb;
 
 //dark theme
