--- a/src/scss/components/breath-icon.scss
+++ b/src/scss/components/breath-icon.scss
@@ -4,7 +4,7 @@
     width: 100px;
     height: 100px;
 
-    background: $color-gray-2;
+    background: var(--color-bg-muted);
     border-radius: 50%;
     overflow: hidden;
     padding: 10px;
