--- a/src/scss/components/exercise.scss
+++ b/src/scss/components/exercise.scss
@@ -35,6 +35,7 @@
   }
   &__buttons {
     text-align: center;
+    margin-top: $margin-2;
   }
 
   &__icons {
@@ -42,16 +43,5 @@
     display: flex;
     gap: 30px;
     justify-content: center;
-
-    & > img {
-      flex: 0 0 auto;
-      width: 100px;
-      height: 100px;
-
-      background: $color-gray-2;
-      border-radius: 50%;
-      overflow: hidden;
-      padding: 10px;
-    }
   }
 }
