Refactored: Breath icons now loading with <use>

--- a/src/scss/components/breath-icon.scss
+++ b/src/scss/components/breath-icon.scss
@@ -1,5 +1,8 @@
-.icon {
-  &__exhale {
+.breath-icon {
+  height: 0;
+
+  &--exhale-nose,
+  &--exhale-mouth {
     flex: 0 0 auto;
     width: 100px;
     height: 100px;
@@ -8,6 +11,12 @@
     border-radius: 50%;
     overflow: hidden;
     padding: 10px;
+
+    fill: none;
+    stroke: #e36966;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-width: 11px;
 
     &-path {
       fill: none;
@@ -18,7 +27,23 @@
     }
   }
 
-  &__inhale {
+  &--inhale-nose,
+  &--inhale-mouth {
+    flex: 0 0 auto;
+    width: 100px;
+    height: 100px;
+
+    background: var(--color-bg-muted);
+    border-radius: 50%;
+    overflow: hidden;
+    padding: 10px;
+
+    fill: none;
+    stroke: #4ea2e2;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-width: 11px;
+
     &-path {
       fill: none;
       stroke: #4ea2e2;
